<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jon.calculator.MainActivity">

    <EditText
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:digits=".()/*-+1234567890"
        android:ems="10"
        android:hint="@string/operand1"
        android:inputType="none|number|numberSigned|numberDecimal|text"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:digits=".()/*-+1234567890"
        android:ems="10"
        android:hint="@string/operand2"
        android:inputType="none|number|numberSigned|numberDecimal|text"
        android:selectAllOnFocus="true"
        android:singleLine="true"

        android:nextFocusDown="@+id/text1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="26dp"
        android:onClick="clickAdd"
        android:text="@string/clickAdd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="112dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="26dp"
        android:onClick="clickSub"
        android:text="@string/clickSub"
        app:layout_constraintLeft_toLeftOf="@+id/buttonAdd"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="116dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="26dp"
        android:onClick="clickMult"
        android:text="@string/clickMult"
        app:layout_constraintLeft_toLeftOf="@+id/buttonMinus"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="26dp"
        android:onClick="clickDiv"
        android:text="@string/clickDiv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />

    <Button
        android:id="@+id/buttonSQRT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="112dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="26dp"
        android:onClick="clickSqrt"
        android:text="@string/clickSqrt"
        app:layout_constraintLeft_toLeftOf="@+id/buttonDivide"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/buttonPOW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="116dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="26dp"
        android:onClick="clickPow"
        android:text="@string/clickPow"
        app:layout_constraintLeft_toLeftOf="@+id/buttonSQRT"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply" />

    <EditText
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/result"
        android:windowSoftInputMode="stateHidden"
        android:inputType="none"
        android:textIsSelectable="true"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="228dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="26dp"
        android:onClick="clickClear"
        android:text="@string/clickClear"
        app:layout_constraintLeft_toLeftOf="@+id/text3"
        app:layout_constraintTop_toBottomOf="@+id/buttonPOW" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="180dp"
        android:onClick="clickExit"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

</android.support.constraint.ConstraintLayout>
